nesc-frontend/src/test/resources/lexer/invalidtokens/InvalidCharacterEOF.nc
configuration InvalidCharacterEOF {
} implementation {
    char invalid = 'a